--- a/XamJam.Demo/XamJam.Demo.iOS/packages.config
+++ b/XamJam.Demo/XamJam.Demo.iOS/packages.config
@@ -1,4 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="xamarinios10" />
+  <package id="Fody" version="1.29.4" targetFramework="xamarinios10" developmentDependency="true" />
+  <package id="MR.Gestures" version="1.3.5" targetFramework="xamarinios10" />
+  <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="xamarinios10" developmentDependency="true" />
+  <package id="Softlion.XamSvg" version="2.3.1.4" targetFramework="xamarinios10" />
+  <package id="Vapolia.XamSvg.Forms" version="2.3.0.8" targetFramework="xamarinios10" />
+  <package id="WebP.Touch" version="1.0.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.1.7" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.1.7" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="xamarinios10" />
 </packages>
