--- a/XamJam.Demo/XamJam.Demo.UWP/project.json
+++ b/XamJam.Demo/XamJam.Demo.UWP/project.json
@@ -1,7 +1,12 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Xamarin.Forms": "2.3.1.114"
+    "MR.Gestures": "1.3.5",
+    "Softlion.XamSvg": "2.3.1.4",
+    "Vapolia.XamSvg.Forms": "2.3.0.8",
+    "Xamarin.FFImageLoading": "2.1.7",
+    "Xamarin.FFImageLoading.Forms": "2.1.7",
+    "Xamarin.Forms": "2.3.2.127"
   },
   "frameworks": {
     "uap10.0": {}
