--- a/XamJam.Wall/XamJam.Wall.csproj
+++ b/XamJam.Wall/XamJam.Wall.csproj
@@ -47,9 +47,6 @@
       <HintPath>..\packages\MR.Gestures.1.3.5\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\MR.Gestures.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Plugin.XamJam.Screen.Abstractions">
-      <HintPath>..\XamJam.Screen\Plugin.XamJam.Screen.UWP\bin\Debug\Plugin.XamJam.Screen.Abstractions.dll</HintPath>
-    </Reference>
     <Reference Include="PropertyChanged, Version=1.51.3.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
       <HintPath>..\packages\PropertyChanged.Fody.1.51.3\Lib\portable-net4+sl4+wp8+win8+wpa81+MonoAndroid16+MonoTouch40\PropertyChanged.dll</HintPath>
       <Private>False</Private>
@@ -79,6 +76,10 @@
     <ProjectReference Include="..\XamJam.BugHound\Plugin.XamJam.BugHound\Plugin.XamJam.BugHound.csproj">
       <Project>{54997076-792F-4AAF-82C0-EDE69ADF38DD}</Project>
       <Name>Plugin.XamJam.BugHound</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XamJam.Screen\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
+      <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
     </ProjectReference>
     <ProjectReference Include="..\XamJam.Screen\Plugin.XamJam.Screen\Plugin.XamJam.Screen.csproj">
       <Project>{a6fcef44-d2ba-42c7-b3cb-13667bcd7b54}</Project>
