--- a/XamJam.BugHound/Plugin.XamJam.BugHound.UWP/Plugin.XamJam.BugHound.UWP.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.UWP/Plugin.XamJam.BugHound.UWP.csproj
@@ -126,6 +126,9 @@
       <Name>Plugin.XamJam.BugHound.Abstractions</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="FodyWeavers.xml" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
