--- a/XamJam.Screen/Plugin.XamJam.Screen.UWP/Plugin.XamJam.Screen.UWP.csproj
+++ b/XamJam.Screen/Plugin.XamJam.Screen.UWP/Plugin.XamJam.Screen.UWP.csproj
@@ -122,6 +122,9 @@
       <Name>Plugin.XamJam.Screen.Abstractions</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="FodyWeavers.xml" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
