--- a/XamJam.Demo/XamJam.Demo.iOS/packages.config
+++ b/XamJam.Demo/XamJam.Demo.iOS/packages.config
@@ -3,6 +3,9 @@
   <package id="Fody" version="1.29.2" targetFramework="xamarinios10" developmentDependency="true" />
   <package id="MR.Gestures" version="1.3.5" targetFramework="xamarinios10" />
   <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="xamarinios10" developmentDependency="true" />
+  <package id="SkiaSharp" version="1.54.1" targetFramework="xamarinios10" />
+  <package id="SkiaSharp.Views" version="1.54.1-beta1" targetFramework="xamarinios10" />
+  <package id="SkiaSharp.Views.Forms" version="1.54.1-beta1" targetFramework="xamarinios10" />
   <package id="Softlion.XamSvg" version="2.3.2.4" targetFramework="xamarinios10" />
   <package id="Vapolia.XamSvg.Forms" version="2.3.2.4" targetFramework="xamarinios10" />
   <package id="WebP.Touch" version="1.0.2" targetFramework="xamarinios10" />
