--- a/XamJam.Demo/XamJam.Demo.Droid/packages.config
+++ b/XamJam.Demo/XamJam.Demo.Droid/packages.config
@@ -3,9 +3,9 @@
   <package id="Fody" version="1.29.4" targetFramework="monoandroid70" developmentDependency="true" />
   <package id="MR.Gestures" version="1.3.5" targetFramework="monoandroid60" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="monoandroid70" developmentDependency="true" />
-  <package id="SkiaSharp" version="1.54.1" targetFramework="monoandroid70" />
-  <package id="SkiaSharp.Views" version="1.54.1-beta1" targetFramework="monoandroid70" />
-  <package id="SkiaSharp.Views.Forms" version="1.54.1-beta1" targetFramework="monoandroid70" />
+  <package id="SkiaSharp" version="1.55.0" targetFramework="monoandroid70" />
+  <package id="SkiaSharp.Views" version="1.55.0" targetFramework="monoandroid70" />
+  <package id="SkiaSharp.Views.Forms" version="1.55.0" targetFramework="monoandroid70" />
   <package id="Softlion.XamSvg" version="2.3.2.4" targetFramework="monoandroid70" />
   <package id="Vapolia.XamSvg.Forms" version="2.3.2.4" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
@@ -16,7 +16,7 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.FFImageLoading" version="2.2.3" targetFramework="monoandroid70" />
-  <package id="Xamarin.FFImageLoading.Forms" version="2.2.3" targetFramework="monoandroid70" />
+  <package id="Xamarin.FFImageLoading" version="2.2.5" targetFramework="monoandroid70" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.5" targetFramework="monoandroid70" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="monoandroid60" />
 </packages>
