--- a/XamJam.Demo/XamJam.Demo.iOS/packages.config
+++ b/XamJam.Demo/XamJam.Demo.iOS/packages.config
@@ -3,13 +3,13 @@
   <package id="Fody" version="1.29.4" targetFramework="xamarinios10" developmentDependency="true" />
   <package id="MR.Gestures" version="1.3.5" targetFramework="xamarinios10" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="xamarinios10" developmentDependency="true" />
-  <package id="SkiaSharp" version="1.54.1" targetFramework="xamarinios10" />
-  <package id="SkiaSharp.Views" version="1.54.1-beta1" targetFramework="xamarinios10" />
-  <package id="SkiaSharp.Views.Forms" version="1.54.1-beta1" targetFramework="xamarinios10" />
+  <package id="SkiaSharp" version="1.55.0" targetFramework="xamarinios10" />
+  <package id="SkiaSharp.Views" version="1.55.0" targetFramework="xamarinios10" />
+  <package id="SkiaSharp.Views.Forms" version="1.55.0" targetFramework="xamarinios10" />
   <package id="Softlion.XamSvg" version="2.3.2.4" targetFramework="xamarinios10" />
   <package id="Vapolia.XamSvg.Forms" version="2.3.2.4" targetFramework="xamarinios10" />
   <package id="WebP.Touch" version="1.0.2" targetFramework="xamarinios10" />
-  <package id="Xamarin.FFImageLoading" version="2.2.3" targetFramework="xamarinios10" />
-  <package id="Xamarin.FFImageLoading.Forms" version="2.2.3" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="xamarinios10" />
 </packages>
