XamJam.Util used this hint to try to fix the Microsoft TPL Dataflow reference issue from Droid & iOS: https://developer.xamarin.com/guides/cross-platform/troubleshooting/questions/pcl-case-study/ Also updated nuget packages. I need to automate deploying new nugets, argh.

--- a/XamJam.BugHound/Plugin.XamJam.BugHound.WindowsPhone8/Plugin.XamJam.BugHound.WindowsPhone8.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.WindowsPhone8/Plugin.XamJam.BugHound.WindowsPhone8.csproj
@@ -31,6 +31,7 @@
     <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>Bin\Debug\Plugin.XamJam.BugHound.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
