--- a/XamJam.BugHound/Plugin.XamJam.BugHound.WindowsStore/Plugin.XamJam.BugHound.WindowsStore.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.WindowsStore/Plugin.XamJam.BugHound.WindowsStore.csproj
@@ -27,6 +27,7 @@
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_APP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Plugin.XamJam.BugHound.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
