--- a/XamJam.BugHound/Plugin.XamJam.BugHound.iOS/Plugin.XamJam.BugHound.iOS.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.iOS/Plugin.XamJam.BugHound.iOS.csproj
@@ -25,6 +25,7 @@
     <ConsolePause>false</ConsolePause>
     <MtouchDebug>true</MtouchDebug>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <DocumentationFile>bin\iPhone\Debug\Plugin.XamJam.BugHound.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
