--- a/XamJam.BugHound/Plugin.XamJam.BugHound/Plugin.XamJam.BugHound.csproj
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound/Plugin.XamJam.BugHound.csproj
@@ -26,6 +26,7 @@
     <DefineConstants>TRACE;DEBUG;PORTABLE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Plugin.XamJam.BugHound.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
