--- a/XamJam.BugHound/Plugin.XamJam.BugHound.nuspec
+++ b/XamJam.BugHound/Plugin.XamJam.BugHound.nuspec
@@ -27,7 +27,12 @@
 			<group targetFramework="uap"/>
 			<group targetFramework="dotnet"/>
 		</dependencies>
-	</metadata>
+    <releaseNotes>
+      0.0.4-alpha
+      - compiling in 'debug' so we don't lose the debug.writeline
+      - also added the XML docs to the nuget package
+    </releaseNotes>
+  </metadata>
 	<files>
 		<!--Core-->
 		<file src="Plugin.XamJam.BugHound\bin\Debug\Plugin.XamJam.BugHound.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.BugHound.dll" />
