--- a/XamJam.Pic/XamJam.Pic.csproj
+++ b/XamJam.Pic/XamJam.Pic.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\XamJam.Pic.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\XamJam.Pic.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="IPic.cs" />
@@ -68,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Plugin.XamJam.Pic.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
